package notificationsystem.model;

import org.springframework.data.jpa.repository.JpaRepository;

public interface SystemLoginRepository  extends JpaRepository<SystemLogin, Long> {
}
